# skiff

./: .gitmodules  CMakeLists.txt  README.md
cmake/: FindLibUV.cmake  ProjectBinaryen.cmake  UnitTest.cmake
examples/: CMakeLists.txt  addFive  addFive.c  addFive.ll  addFive.s  addFive.sk  advancedTypes.sk  classes.sk  fib.sk  hello.c  hello.ll  helloSkiff.sk  intType.sk  letExpr.ll  letExpr.sk  longFile.ll  longFile.sk  mulAdd.ll  mulAdd.s  mulAdd.sk  multiLineFunc.ll  multiLineFunc.sk  recursion  recursion.ll  recursion.s  recursion.sk  runFoo.cpp  simpleFunc.ll  simpleFunc.s  simpleFunc.sk  simpleIf  simpleIf.ll  simpleIf.s  simpleIf.sk
sklib/: core.sk
src/: BinaryenModule.hpp  CMakeLists.txt  ast.cpp  ast.hpp  ast_printer.cpp  ast_printer.hpp  ast_visitor.cpp  ast_visitor.hpp  code_gen.cpp  code_gen.hpp  compiler.cpp  compiler.hpp  hello_binaryen.cpp  hello_llvm.cpp  hello_llvm_c.cpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  sk_source_file.hpp  skc.cpp  ski.cpp  skic.cpp  source.cpp  source.hpp  symbol.cpp  symbol.hpp  type.cpp  type.hpp  wasm_code_gen.cpp  wasm_code_gen.hpp  wasm_compiler.cpp  wasm_compiler.hpp
src/util/: logger.cpp  logger.hpp  string_view.hpp  util.hpp  visitor.hpp
test/: CMakeLists.txt  test_binaryen.cpp  test_lexer.cpp  test_parser.cpp  test_source.cpp
